--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "python.pythonPath": "venv/bin/python",
     "cSpell.words": [
         "Makefiles",
-        "stuffnodes"
+        "devenv",
+        "stuffnodes",
+        "venv"
     ]
 }
