Handle sysdem dependencies
* new *sysdeps* target
* incremental behavior (don't always check dependencies)
* integrated in setup target
* introduce shared python file for helpers
* add verbose mode for status helpers
* handle non interractive install
* handle forced reinstall

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,17 @@
 {
     "python.pythonPath": "venv/bin/python",
+    "python.autoComplete.extraPaths": [
+        "helpers"
+    ],
     "cSpell.words": [
+        "DEPS",
         "Makefiles",
         "devenv",
+        "nargs",
+        "pyvenv",
         "strftime",
         "stuffnodes",
+        "sysdeps",
         "venv"
     ]
 }
