Handle Python tests
* Add tests target (to run pytest and flake8)
* Add flake8 target (to run flake8 only)
* Both tests and flake8 targets are fully incremental
* Enabled coverage analysis, requiring 100% to be successful
* Implement devenv python helpers tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,22 @@
 {
     "python.pythonPath": "venv/bin/python",
     "python.autoComplete.extraPaths": [
-        "helpers"
+        "helpers",
+        "tests"
     ],
+    "python.testing.pytestEnabled": true,
     "cSpell.words": [
         "DEPS",
         "Makefiles",
+        "XDIST",
+        "datefmt",
         "devenv",
+        "dynod",
+        "isort",
+        "msecs",
         "nargs",
+        "noreqs",
+        "pytest",
         "pyvenv",
         "strftime",
         "sysdeps",
