Add support for Github test workflow
Additionally:
* fix flake8 on empty out directory
* move tests report in out/tests directory
* clean runner directory after having moved test folder

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "Makefiles",
         "XDIST",
         "chdir",
+        "chmod",
         "datefmt",
         "devenv",
         "dynod",
