--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ filterwarnings =
 addopts = 
     --capture=sys
     --numprocesses=auto
-    --junit-xml=out/tests.xml
+    --junit-xml=out/tests/report.xml
     --cov=helpers
     --cov-report=html:out/coverage-report
     --cov-report=xml:out/coverage.xml
