Support branches checkout
* Add commands to repo helper to generate branch manifest, and checkout branches
* Customize make targets if MANIFEST_BRANCHES env var is set

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "DEPS",
         "Makefiles",
         "XDIST",
+        "chdir",
         "datefmt",
         "devenv",
         "dynod",
@@ -20,6 +21,7 @@
         "pyvenv",
         "strftime",
         "sysdeps",
+        "toxml",
         "venv"
     ]
 }
