Generate Python setup.cfg + fix tests debugging
* Generate setup.cfg from devenv template files + shared workspace file + project file
* Also generate setup.py
* Rework tests layout so that debugging work
* build is not triggering venv install anymore (useless)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,40 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: repo helper - get groups",
+            "name": "Debug Tests",
             "type": "python",
-            "request": "launch",
-            "program": "${workspaceRoot}/helpers/repo.py",
-            "console": "integratedTerminal",
-            "args": [
-                "-r",
-                "${workspaceRoot}/../.repo",
-                "-g"
-            ]
-        },
-        {
-            "name": "Python: repo helper - get url",
-            "type": "python",
-            "request": "launch",
-            "program": "${workspaceRoot}/helpers/repo.py",
-            "console": "integratedTerminal",
-            "args": [
-                "-r",
-                "${workspaceRoot}/../.repo",
-                "-u"
-            ]
-        },
-        {
-            "name": "Python: repo helper - get manifest",
-            "type": "python",
-            "request": "launch",
-            "program": "${workspaceRoot}/helpers/repo.py",
-            "console": "integratedTerminal",
-            "args": [
-                "-r",
-                "${workspaceRoot}/../.repo",
-                "-m"
-            ]
+            "request": "test",
+            "justMyCode": false,
+            "env": {
+                "PYTEST_ADDOPTS": "--no-cov -n 0"
+            },
         }
     ]
 }
