Add name to generated metadata in setup.cfg

--- a/templates/setup-build.cfg
+++ b/templates/setup-build.cfg
@@ -1,4 +1,5 @@
 [metadata]
+name = {{PYTHON_PACKAGE}}
 version = {{VERSION}}
 long_description = file: README.md
 license = Mozilla Public License Version 2.0
