Better support for local Python install

--- a/templates/setup-build.cfg
+++ b/templates/setup-build.cfg
@@ -9,8 +9,9 @@ classifiers =
     Programming Language :: Python :: 3.8
 
 [options]
-package_dir = =src
+package_dir = ={{SRC_FOLDER}}
 packages = find:
 
 [options.packages.find]
-where = src
+where = {{SRC_FOLDER}}
+exclude = tests
