Handle python requirements in setup.cfg generation

--- a/templates/setup-build.cfg
+++ b/templates/setup-build.cfg
@@ -11,6 +11,10 @@ classifiers =
 [options]
 package_dir = ={{SRC_FOLDER}}
 packages = find:
+setup_requires = wheel
+install_requires =
+    wheel
+    {{PYTHON_SETUP_REQUIREMENTS}}
 
 [options.packages.find]
 where = {{SRC_FOLDER}}
