--- a/templates/setup-build.cfg
+++ b/templates/setup-build.cfg
@@ -2,6 +2,7 @@
 name = {{PYTHON_PACKAGE}}
 version = {{VERSION}}
 long_description = file: README.md
+long_description_content_type = text/markdown
 license = Mozilla Public License Version 2.0
 classifiers =
     Programming Language :: Python :: 3.6
