Pass env to subprocess in settings builder

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
     "python.testing.pytestEnabled": true,
     "cSpell.words": [
         "DEPS",
+        "MFLAGS",
         "Makefiles",
         "XDIST",
         "chdir",
