Add support for deb packages build

--- a/.devenv/vscode/shared/settings.json
+++ b/.devenv/vscode/shared/settings.json
@@ -11,6 +11,7 @@
         "devenv",
         "dynod",
         "ifdef",
+        "ifndef",
         "ifneq",
         "isort",
         "mkdir",
@@ -19,10 +20,12 @@
         "noqa",
         "noreqs",
         "proto",
+        "pycache",
         "pylint",
         "pytest",
         "pyvenv",
         "sdist",
+        "skel",
         "strftime",
         "sysdeps",
         "toxml",
