Make pytest CPUs count configurable

--- a/templates/python/setup-test.cfg
+++ b/templates/python/setup-test.cfg
@@ -5,7 +5,7 @@ filterwarnings =
     ignore::DeprecationWarning
 addopts = 
     --capture=sys
-    --numprocesses=auto
+    --numprocesses={{PYTEST_NUM_PROCESSES}}
     --junit-xml={{TEST_REPORT}}
     --cov={{SRC_FOLDER}}
     --cov-report=html:{{OUTPUT_ROOT}}/coverage-report
