Add generic imports in generated code init file
+ Add some dictionnary words

--- a/.devenv/vscode/shared/settings.json
+++ b/.devenv/vscode/shared/settings.json
@@ -9,10 +9,15 @@
         "chmod",
         "datefmt",
         "devenv",
+        "DGRAM",
         "dynod",
+        "getuid",
+        "getpwuid",
+        "grpc",
         "ifdef",
         "ifndef",
         "ifneq",
+        "INET",
         "isort",
         "mkdir",
         "msecs",
@@ -20,6 +25,7 @@
         "noqa",
         "noreqs",
         "proto",
+        "protoc",
         "protos",
         "pycache",
         "pylint",
