Some more words in dictionnary

--- a/.devenv/vscode/shared/settings.json
+++ b/.devenv/vscode/shared/settings.json
@@ -25,6 +25,7 @@
         "noqa",
         "noreqs",
         "proto",
+        "protobuf",
         "protoc",
         "protos",
         "pycache",
