--- a/templates/python/setup.cfg
+++ b/templates/python/setup.cfg
@@ -3,7 +3,7 @@ max-line-length = 160
 enable-extensions = G
 # Best way to select all installed plugins so far ...
 select = E,F,W,A,B,C,D,G,H,I,J,K,L,M,N,O,P,Q,R,S,T,U,V,X,Y,Z
-ignore = E501,E203,W503
+ignore = E501,E203,W503,B902
 format = html
 htmldir = {{FLAKE_ROOT}}
 show-source = true
